[Material][Mac] Fixed tabstrip overlap issue

BUG=619050

Review-Url: https://codereview.chromium.org/2063823007
Cr-Commit-Position: refs/heads/master@{#399762}

Former-commit-id: 43089e93f5acad66a90edae0fc437ef2bddf03db