chrome/browser/ui/cocoa/tabs/tab_window_controller.mm
@@ -182,12 +182,15 @@
     // Return the original window's tab strip view and content view to their
     // places. The TabStripView always needs to be in front of the window's
     // content view and therefore it should always be added after the content
-    // view is set.
+    // view is set. It needs to be positioned at the bottom of the view
+    // hierarchy to ensure that it does not overlap the avatar button icon.
     [[window contentView] addSubview:originalContentView_
                           positioned:NSWindowBelow
                           relativeTo:nil];
     originalContentView_.frame = [[window contentView] bounds];
-    [[window contentView] addSubview:[self tabStripView]];
+    [[window contentView] addSubview:[self tabStripView]
+                          positioned:NSWindowBelow
+                          relativeTo:nil];
     [[self tabStripView] setInATabDraggingOverlayWindow:NO];
     [[window contentView] updateTrackingAreas];
 
